# navcube

./: CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: conda-publish.yml  conda-release.yml  pypip-release.yml
docs/: _config.yml  api-reference.md  changelog.md  connectors.md  coordinate-systems.md  examples.md  getting-started.md  index.md  style-reference.md
docs/_layouts/: default.html
docs/assets/js/: demo.js
navcube/: __init__.py  widget.py
navcube/connectors/: __init__.py  occ.py  vtk.py
