[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navcube"
version = "0.0.1"
description = "A 3D orientation cube widget for PySide6 — renderer-agnostic, drop-in ready"
readme = "README.md"
license = { text = "LGPL-2.1" }
requires-python = ">=3.10"
keywords = ["pyside6", "qt", "navcube", "navicube", "viewcube", "3d", "cad", "orientation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PySide6",
    "numpy",
]

[project.optional-dependencies]
occ = ["pythonocc-core"]
vtk = ["vtk"]

[project.urls]
Repository = "https://github.com/nishikantmandal007/pyside-navicube"
Documentation = "https://nishikantmandal007.github.io/pyside-navicube/"

[tool.hatch.build.targets.wheel]
packages = ["navcube"]
